it works like i prefer now

--- a/assets/styles/main.scss
+++ b/assets/styles/main.scss
@@ -4,7 +4,8 @@
 // Import vendors
 @import "vendors/foundation";
 @import "~anunatak-helpers/src/sass/anunatheme";
-@import "~font-awesome/scss/font-awesome";
+// @import "~font-awesome/scss/font-awesome";
+@import "~simple-line-icons/scss/simple-line-icons";
 
 // Import global styles
 @import "common/global";
