--- a/assets/styles/common/_variables.scss
+++ b/assets/styles/common/_variables.scss
@@ -7,3 +7,4 @@ $sidebar-sm-columns:    4;
 
 // Vendor variables
 $fa-font-path:          '~font-awesome/fonts';
+$simple-line-font-path: '~simple-line-icons/fonts/';
